title added in Notebook

--- a/Food_classiffication_deep_learning_14072019.ipynb
+++ b/Food_classiffication_deep_learning_14072019.ipynb
@@ -46,7 +46,7 @@
     "toc": true
    },
    "source": [
-    "<h1><span class=\"tocSkip\"></span></h1>\n",
+    "<h1>Food Classification Task: Transfer learning<span class=\"tocSkip\"></span></h1>\n",
     "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Import-Library\" data-toc-modified-id=\"Import-Library-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Import Library</a></span></li><li><span><a href=\"#Reading-Data\" data-toc-modified-id=\"Reading-Data-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Reading Data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Create-labels\" data-toc-modified-id=\"Create-labels-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Create labels</a></span></li><li><span><a href=\"#Train,-Validation-and-Test-Distribution\" data-toc-modified-id=\"Train,-Validation-and-Test-Distribution-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Train, Validation and Test Distribution</a></span></li><li><span><a href=\"#Sample-Images\" data-toc-modified-id=\"Sample-Images-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Sample Images</a></span></li></ul></li><li><span><a href=\"#Features-Extraction\" data-toc-modified-id=\"Features-Extraction-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Features Extraction</a></span></li><li><span><a href=\"#CNN-Model-Training-:-Scratch\" data-toc-modified-id=\"CNN-Model-Training-:-Scratch-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>CNN Model Training : Scratch</a></span><ul class=\"toc-item\"><li><span><a href=\"#Test-Evaluation\" data-toc-modified-id=\"Test-Evaluation-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Test Evaluation</a></span></li></ul></li><li><span><a href=\"#Transfer-Learning-CNN-:-VGG16-Features\" data-toc-modified-id=\"Transfer-Learning-CNN-:-VGG16-Features-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Transfer Learning CNN : VGG16 Features</a></span><ul class=\"toc-item\"><li><span><a href=\"#Test-Evaluation\" data-toc-modified-id=\"Test-Evaluation-5.1\"><span class=\"toc-item-num\">5.1&nbsp;&nbsp;</span>Test Evaluation</a></span></li></ul></li><li><span><a href=\"#Logistic-Regression:-VGG16-Features\" data-toc-modified-id=\"Logistic-Regression:-VGG16-Features-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Logistic Regression: VGG16 Features</a></span><ul class=\"toc-item\"><li><span><a href=\"#Test-Evaluation\" data-toc-modified-id=\"Test-Evaluation-6.1\"><span class=\"toc-item-num\">6.1&nbsp;&nbsp;</span>Test Evaluation</a></span></li></ul></li></ul></div>"
    ]
   },
@@ -1089,7 +1089,7 @@
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
-   "title_cell": "",
+   "title_cell": "Food Classification Task: Transfer learning",
    "title_sidebar": "Contents",
    "toc_cell": true,
    "toc_position": {
